fixed spacing

--- a/ITCS333Project/login/Login.css
+++ b/ITCS333Project/login/Login.css
@@ -1,29 +1,32 @@
 html{
-    overflow-x: hidden;
-} 
-
-.container{
-    display: block;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;   
     width: 100%;
+    height: 100%;
     position: relative;
+    overflow-x: hidden;
 }
 
+.container{
+    display: grid;
+    align-items: center;
+    margin: auto;
+   text-align: center;   
+   width: 480px;
+   height: 650px;
+   justify-content: center;
+   align-content: center;
+}
 main{
     padding: 10px;
     margin: auto;
     width: 350px;
-    height: 180px;
+    height: 200px;
     border-radius: 50px;
     text-align: center;
     background-color: white;
-    margin-top: 60px;
+    margin-bottom: 100px;
 }
-
 input[type=text], input[type=password]{
-    border: 0px;
+    border: none;
     padding: 5px;
     border-radius: 5px;
     background-color: rgba(173, 216, 230, 0.413);
@@ -43,7 +46,6 @@ main p{
 main a{
     display: inline-block;
     padding-bottom: 10px;
-    
 }
 
 main button{
@@ -56,12 +58,12 @@ main button{
     background-color: rgba(151, 228, 151, 0.678);;
 }
 
-img{
+body img{
     height: 100%;
+    width: 100%;
     position: absolute;
     z-index: -1;
     opacity: 0.68;
-    background-size: cover;
 }
 
 header{
@@ -74,7 +76,7 @@ header{
 }
 
 header h1{
-    margin-top: 120px;
+    margin-top: 50px;
     color: white;
     font-size: xx-large;
     font-family:cursive;
