--- a/ITCS333Project/register/register.css
+++ b/ITCS333Project/register/register.css
@@ -2,9 +2,9 @@
 html{
     width: 100%;
     height: 100%;
-    position: relative;
     overflow-x: hidden;
 }
+
 .container{
     display: grid;
     align-items: center;
@@ -14,6 +14,7 @@ html{
    height: 650px;
    justify-content: center;
    align-content: center;
+   position: relative;
 }
 
 main{
@@ -62,12 +63,15 @@ main button{
     background-color: rgba(151, 228, 151, 0.678);
 }
 
-body img{
+img{
     height: 100%;
+    width: 100%;
     position: absolute;
     z-index: -1;
     opacity: 0.68;
+    background-size:cover;
 }
+
 header{
     margin-left: auto;
     margin-right: auto;
@@ -75,13 +79,6 @@ header{
     align-items: center;
     width: 400px;
     height: 150px;
-}
-
-header img{
-    opacity: 1;
-    width: 400px;
-    height: 100px;
-    
 }
 
 header h1{
